intTests/test_type_errors/err039.log.good
Loading file "err039.saw"
Type errors:
  err039.saw:7:26-7:32: Too many arguments to function of type [t.0] -> [t.0] -> [t.0]
  err039.saw:5:13-5:23: The type [t.0] -> [t.0] -> [t.0] arises from the context of the term

FAILED
