intTests/test_type_errors/err039.saw
//
// Check for too many arguments to a function.
//

let f x y = concat x y;

let xs = f [1, 2] [3, 4] [5, 6];
